[gd_scene load_steps=6 format=3 uid="uid://b76nidx4fe5uc"]

[ext_resource type="Script" path="res://Main/Enviroment/endingmanager.gd" id="1_d3teu"]
[ext_resource type="PackedScene" uid="uid://6rh888bwbkee" path="res://Main/UI/main_menu/fade_manager.tscn" id="1_pvr61"]
[ext_resource type="Texture2D" uid="uid://bqwjr51pkkkdq" path="res://Artwork/UI/blackbox.png" id="2_k7qj5"]
[ext_resource type="Texture2D" uid="uid://bduxisyxmqnlc" path="res://Artwork/UI/goodendingtext.png" id="3_o6qod"]
[ext_resource type="PackedScene" uid="uid://b756afblp7a8e" path="res://Main/UI/pause.tscn" id="5_ul5ha"]

[node name="Good_ending" type="Node2D"]
script = ExtResource("1_d3teu")

[node name="Blackbox2" type="Sprite2D" parent="."]
position = Vector2(736, 0)
scale = Vector2(6.31248, 23.9766)
texture = ExtResource("2_k7qj5")

[node name="Fade_manager" parent="." instance=ExtResource("1_pvr61")]
z_index = 3

[node name="Menu" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_o6qod")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Blackbox" type="Sprite2D" parent="."]
position = Vector2(-760, -2.00001)
scale = Vector2(7.5, 24.625)
texture = ExtResource("2_k7qj5")

[node name="Pause" parent="." instance=ExtResource("5_ul5ha")]
visible = false
